changed file names to WOB

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -313,3 +313,7 @@ button-adicionar-dataset:focus {
 .result-description {
   font-size: 1.2em;
 }
+
+.sidebar-brand{
+  font-size: 1em !important;
+}
