--- a/wob_data_upload/templates/wiki_olap_home.html
+++ b/wob_data_upload/templates/wiki_olap_home.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bem vindo ao WikiOlap</title>
+    <title>Bem vindo ao WikiOlap Base</title>
 
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -31,20 +31,20 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        <i class="fa fa-database" aria-hidden="true"></i> Wiki Olap <sub>Beta</sub>
+                        <i class="fa fa-database" aria-hidden="true"></i> WikiOlap Base <sub style="font-size:0.5em;">Beta</sub>
                     </a>
                 </li>
                 <li class="side-menu-item">
                     <a href="/"> <i class="fa fa-home" aria-hidden="true"></i> Home</a>
                 </li>
                 <li class="side-menu-item">
-                    <a href="/wiki_olap_help"> <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda</a>
-                </li>
-                <li class="side-menu-item">
                     <a href="/upload_file"> <i class="fa fa-cloud-upload" aria-hidden="true"></i> Enviar Dataset</a>
                 </li>
                 <li class="side-menu-item">
                     <a href="/search_metadata"> <i class="fa fa-search" aria-hidden="true"></i> Buscar Datasets</a>
+                </li>
+                <li class="side-menu-item">
+                    <a href="/wiki_olap_help"> <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda</a>
                 </li>
             </ul>
         </div>
@@ -58,7 +58,7 @@
                                 <fieldset>
                                     <!-- Form Name -->
                                     <legend>
-                                        <h1>Bem vindo ao WikiOlap!
+                                        <h1>Bem vindo ao WikiOlap Base!
                                             <h1>
                                     </legend>
 
@@ -66,7 +66,7 @@
 
                                 <div class="home-whoweare">
                                     <h3>O que é?</h3>
-                                    O WikiOlap é um repositório integrado que permite o armazenamento de diferentes conjuntos de dados. A partir do processamento
+                                    O WikiOlap Base é um repositório integrado que permite o armazenamento de diferentes conjuntos de dados. A partir do processamento
                                     desses dados nossa ferramenta permite o acesso aos dados integrados a partir de uma API
                                     REST. Com isso usuários podem colaborar enviando diferentes conjuntos de dados e acessando
                                     os conjuntos enviados por outros usuários. A partir desses dados integrados diferentes
