Translated some to english

--- a/wob_data_upload/templates/upload_file.html
+++ b/wob_data_upload/templates/upload_file.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>WikiOlapBase - Enviar dataset</title>
+    <title>WikiOlapBase - Submit dataset</title>
 
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -31,20 +31,20 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        <i class="fa fa-database" aria-hidden="true"></i> WikiOlap Base <sub style="font-size:0.5em;">Beta</sub>
+                        <i class="fa fa-database" aria-hidden="true"></i> WikiOlapBase <sub style="font-size:0.5em;">Beta</sub>
                     </a>
                 </li>
                 <li class="side-menu-item">
                     <a href="/"> <i class="fa fa-home" aria-hidden="true"></i> Home</a>
                 </li>
                 <li class="side-menu-item">
-                    <a href="/upload_file"> <i class="fa fa-cloud-upload" aria-hidden="true"></i> Enviar Dataset</a>
+                    <a href="/upload_file"> <i class="fa fa-cloud-upload" aria-hidden="true"></i> Submit Dataset</a>
                 </li>
                 <li class="side-menu-item">
-                    <a href="/search_metadata"> <i class="fa fa-search" aria-hidden="true"></i> Buscar Datasets</a>
+                    <a href="/search_metadata"> <i class="fa fa-search" aria-hidden="true"></i> Search Datasets</a>
                 </li>
                 <li class="side-menu-item">
-                    <a href="/wiki_olap_help"> <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda</a>
+                    <a href="/wiki_olap_help"> <i class="fa fa-question-circle" aria-hidden="true"></i> Help</a>
                 </li>
             </ul>
         </div>
@@ -54,21 +54,21 @@
                     <ul class="nav nav-pills nav-justified thumbnail setup-panel">
                         <li class="active">
                             <a href="#step-1">
-                                <h4 class="list-group-item-heading">1º Passo</h4>
+                                <h4 class="list-group-item-heading">1º Step</h4>
                                 <i class="fa fa-3x fa-cloud-upload" aria-hidden="true"></i>
                                 <p class="list-group-item-text">Upload</p>
                             </a>
                         </li>
                         <li class="disabled">
                             <a href="#step-2">
-                                <h4 class="list-group-item-heading">2º Passo</h4>
+                                <h4 class="list-group-item-heading">2º Step</h4>
                                 <i class="fa fa-3x fa-edit" aria-hidden="true"></i>
-                                <p class="list-group-item-text">Descrição</p>
+                                <p class="list-group-item-text">Description</p>
                             </a>
                         </li>
                         <li class="disabled">
                             <a href="#step-3">
-                                <h4 class="list-group-item-heading">3º Passo</h4>
+                                <h4 class="list-group-item-heading">3º Step</h4>
                                 <i class="fa fa-3x fa-tags" aria-hidden="true"></i>
                                 <p class="list-group-item-text">Tags</p>
                             </a>
@@ -76,9 +76,9 @@
 
                         <li class="disabled">
                             <a href="#step-4">
-                                <h4 class="list-group-item-heading">4º Passo</h4>
+                                <h4 class="list-group-item-heading">4º Step</h4>
                                 <i class="fa fa-3x fa-sitemap" aria-hidden="true"></i>
-                                <p class="list-group-item-text">Hierarquias</p>
+                                <p class="list-group-item-text">Hierarchies</p>
                             </a>
                         </li>
 
@@ -95,7 +95,7 @@
                             <div class="col-lg-7">
                                 <span id="addFileId" class="btn  button-adicionar-dataset fileinput-button dz-clickable">
                                         <i class="glyphicon glyphicon-plus"></i>
-                                        <span>ADICIONAR DATASET</span>
+                                        <span>ADD DATASET</span>
                                 </span>
                                 <span class="fileupload-process">
                                         <div id="total-progress" class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
@@ -121,11 +121,11 @@
                                     <div>
                                         <button class="btn btn-primary start">
                                                 <i class="glyphicon glyphicon-upload"></i>
-                                                    <span>Iniciar envio</span>
+                                                    <span>Start</span>
                                             </button>
                                         <button data-dz-remove class="btn btn-warning cancel">
                                                 <i class="glyphicon glyphicon-ban-circle"></i>
-                                                <span>Cancelar</span>
+                                                <span>Cancel</span>
                                             </button>
                                     </div>
                                 </div>
